  * Recommonmark (MarkDown) support with colored code
  * change preview - set paned position fix
  * GTK Warning fix (debian bug #933622)
  * SearchBar and searching text in editor
  * searching text in preview
  * creating backup file before write changes to new one
  * refresh preview action / button
  * opening links in system from preview, known file types open in new formiko
    window

Version 1.3.0 - 16.1.2018 7:00

  * spell check support
  * display white chars switch
  * highlighting current line switch
  * printing document output
  * shortcuts dialog

Version 1.2.1 - 16.1.2018 6:53

  * fix SIGSEGV - gui threads conflict
  * fix window cache settings
  * min size of editor and preview when both widgets are visible
  * python2 fix

Version 1.2.0 - 26.10.2017 19:40

  * vim with working application menu
  * realy disabled accels for vim
  * toggle buttons to on/off editor and preview
  * tabs setting in status bar
  * preferences are save automatical
  * auto indent is switchable
  * showing line numbers is switchable
  * right margin is switchable
  * text wrapping is switchable

Version 1.1.0 - 03.08.2017 7:00

  * GTK Version check
  * add accels only for SourceView editor
  * export document as HTML
  * using WebKit2 engine
  * Python 2.x encoding fixies
  * links, images and media urls showen in popup bar
  * JSON preview
  * PEP writer fix
  * only one application menu
  * info for Debian and NetBSD users
  * SourceView editor settings:
     - tab width
     - usinng spaces intead of tabs
     - 80 chars length line visualization
     - periodic saving file

Version 1.0.2 - 19.07.2016 17:39

  * Formiko Vim entry point

Version 1.0.1 - 14.07.2016 09:08

  * New 1.0.1 release
  * Adding ChangeLog file
  * fix vim editing on empty line at and of file
  * fix file path when application server is running

Version 1.0.0 - 12.07.2016 08:24
  * stable version 1.0.0
  * right source distribution
  * desktop integration
  * litle bit fixies