@@ -14,6 +14,7 @@ Version 1.4.0dev1
   * refresh preview action / button
   * opening links in system from preview, known file types open in new formiko
     window
+  * preview auto scroll
 
 Version 1.3.0 - 16.1.2018 7:00
 
